# zen-disc

./: client.rest  readme.md
zen-disc-backend/: .env.example  Cargo.toml  diesel.toml  readme.md
zen-disc-backend/src/: db.rs  error_handler.rs  main.rs
zen-disc-backend/src/posts/: model.rs  routes.rs
