[package]
name = "zen-disc-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
actix-rt = "2.10.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
diesel = { version = "2.2.0", features = [
    "postgres",
    "r2d2",
    "uuid",
    "chrono",
] }
diesel_migrations = "2.2.0"
env_logger = "0.11.3"
lazy_static = "1.4"
listenfd = "1.0.1"
serde = "1.0"
serde_json = "1.0"
r2d2 = "0.8"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
